tests/invalid_syn/syn12.java
class Main {
    static void run() {
        boolean test = 5 > 6 && ! && true;
    }
}